--- a/style.css
+++ b/style.css
@@ -1,10 +1,39 @@
 body {
   font-family: sans-serif;
+  font-size: 20px;
   text-align: center;
-  background-color: #f2f2f2;
+  background-color: #ffffff;
   padding: 2em;
-  color: #333;
+  color: #570000;
 }
 h1 {
-  color: #2c7;
+  color: rgb(255, 0, 0);
+}
+
+.hidden {
+  display: none;
+}
+
+/* Центрирование загрузочного экрана */
+.loader-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+/* Стиль анимированного спиннера */
+.spinner {
+  width: 60px;
+  height: 60px;
+  border: 8px solid #eee;
+  border-top: 8px solid #4caf50;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+/* Анимация кручения */
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
