--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: 'Segoe UI', sans-serif;
-  background: linear-gradient(-45deg, #10047e, #800303, #292447, #0e0c1f);
+  background: linear-gradient(-45deg, #8d0202, #800303, #810202, #680202);
   background-size: 400% 400%;
   animation: gradientShift 10s ease infinite;
   color: white;
