--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: 'Segoe UI', sans-serif;
-  background: linear-gradient(-45deg, #8d0202, #800303, #810202, #680202);
+  background: linear-gradient(-45deg, #8d0202, #00637c, #029633, #290268);
   background-size: 400% 400%;
   animation: gradientShift 10s ease infinite;
   color: white;
