--- a/style.css
+++ b/style.css
@@ -74,13 +74,13 @@ footer {
   justify-content: space-between;
 }
 
-.actions {
+.action-btn {
   background: #1f1f3b;
   margin: 16px;
   padding: 10px;
   border-radius: 10px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 .notif {
   background: #6c5ce7;
@@ -123,8 +123,8 @@ footer {
 }
 
 #mining-icon {
-  width: 180px;
-  height: 180px;
+  width: 300px;
+  height: 300px;
   background: #FFD42B;
   border-radius: 50%;
   font-size: 48px;
@@ -134,7 +134,12 @@ footer {
   cursor: pointer;
   user-select: none;
   transition: transform 0.1s ease;
+  outline: none;
 }
+#mining-icon:focus {
+  outline: none;
+}
+
 #mining-icon:active {
   transform: scale(0.95);
 }
