--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ footer {
 }
 
 #mining-icon {
-  all: unset; /* сбрасывает все стили браузера */
+  -webkit-tap-highlight-color: transparent;
   width: 300px;
   height: 300px;
   background: #FFD42B;
@@ -139,7 +139,6 @@ footer {
 
 #mining-icon:active {
   transform: scale(0.95);
-  all: unset;
 }
 .floating-plus {
   position: absolute;
